<resources>

    <string name="app_name">Tuber Ruler</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings that control preferences-->
    <string-array name="pref_coin_type_preferences_and_values">
        <item>Quarter</item>
        <item>Dime</item>
        <item>None</item>
        <item>Custom</item>
    </string-array>

    <string-array name="pref_image_processing_type">
        <item>Standard Image Processing</item>
        <item>Machine Learning</item>
    </string-array>

    <string-array name="pref_image_processing_type_values">
        <item>Normal</item>
        <item>Machine_Learning</item>
    </string-array>

    <string name="pref_coin_type_default">Quarter</string>
    <string name="pref_processing_default">Normal</string>

    <string name="pref_coin">Coin_Type</string>
    <string name="pref_coin_title">Reference Object</string>
    <string name="pref_method">Processing_Method</string>
    <string name="pref_method_title">Processing Method</string>
    <string name="coin_type_summary">This option allows you to change the coin you want to use</string>
    <string name="method_pref_summary">This option lets you use classic or machine learning processing methods</string>


    <string name="pref_custom_coin_title">Custom Coin Size (cm)</string>
    <string name="pref_custom_coin_key">Custom_Coin</string>
    <string name="pref_custom_coin_summary">This field is used for when a custom coin is selected. Please put size in cm and only use numbers.</string>


</resources>